--- a/arschaim/index.html
+++ b/arschaim/index.html
@@ -3,8 +3,7 @@
 	<head>
 		<title>Arsch Aim</title>
 		<meta charset="utf-8">
-		<link rel="shortcut icon" type="image/ico" href="../global/images/arschaim.ico">
-		<link rel="stylesheet" href="../global/global.css">
+		<link rel="shortcut icon" type="image/ico" href="images/arschaim.ico">
 		<link rel="stylesheet" href="arschaim.css">
 		<meta name="author" content="Ah`Bi Abdeet">
 		<meta name="description" content="Arsch Aim's unofficial website">
@@ -12,7 +11,7 @@
 		<meta name="twitter:creator" content="@arschaim">
 		<meta name="twitter:title" content="Arsch Aim">
 		<meta name="twitter:description" content="Arsch Aim's unofficial website, hosted on abdeet.net">
-		<meta name="twitter:image" content="../global/images/aalogoround.png">
+		<meta name="twitter:image" content="images/aalogoround.png">
 		<meta name="twitter:image:alt" content="Arsch Aim's logo">
 	</head>
 	<body>
