--- a/home/index.html
+++ b/home/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html lang="en-US">
 	<head>
 		<title>Abdeet.net</title>
-		<!-- <link rel="shortcut icon" type="image/ico" href="../global/images/arschaim.ico"> -->
-		<link rel="stylesheet" href="../global/global.css">
-		<!--<link rel="stylesheet" href="home.css">-->
+		<link rel="stylesheet" href="home.css">
 		<meta charset="utf-8">
 		<meta name="author" content="Abdeet"> 
 		<meta name="description" content="Abdeet's website"> 
