--- a/school/index.html
+++ b/school/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>school.abdeet.net</title>
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="school.css">
 		</head>
 	<body>
 		<header>
