--- a/music/past_songs.html
+++ b/music/past_songs.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Abdeet's Favorite Music</title>
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="music.css">
 	</head>
 	<body>
 		<h1>music.abdeet.net</h1>
