--- a/music/past_songs.html
+++ b/music/past_songs.html
@@ -12,5 +12,8 @@
 		<h3><b>Gomez - Get Myself Arrested</b></h3>
 		<iframe src="https://open.spotify.com/embed/track/7ete47ob5oluTXj7WCQzbi?utm_source=generator&theme=0" width="400px" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>			
 		<p>This song is great. I'm not much of a western musician, so I can't comment on the specifics, but the actual instrument stuff sounds great. The chorus is pretty awesome. When the background singers start singing its cool. The part after it gets more tinny where the main singer goes &quot;well alright&quot; gives me goosebumps. I like this song a lot.</p>
+		<h3><b>Half Japanese - One Million Kisses</b></h3>
+		<iframe src="https://open.spotify.com/embed/track/3cuhPHZIShJvrVST5gkejp" width="400px" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>			
+		<p>It's really weird saying I like this song because of the title but something about the way the singer sings it and the guitar sounds and the whole lo-fi thing going on is just so alluring. I find myself listening to it again and again.</p>
 	</body>
 </html>
