--- a/music/index.html
+++ b/music/index.html
@@ -11,7 +11,7 @@
 		<br>
 		<h2>Current Favorite Song: Natalia Lafourcade - El Pato<b></b></h2>
 		<iframe src="https://open.spotify.com/embed/track/2UxREwhAZtHWOKwSPy26s9" width="400px" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>			
-		<p>I discovered this song in the opening credits of Duck Season (Temporada de patos) on Netflix while taking the bus back to school. First of all, the movie is great, so watch it if you get a chance. Second of all, this song is amazing. It is an earworm; I can't get it out of my mind and when I listen to it I find myself hitting the repeat button. From what I understand, it's a Spanish cover of O Pato, a Portuguese song by Brazilian musician João Gilberto (the father of bossa nova). I think it's one of the best songs I've ever heard.</p>
+		<p>I discovered this song in the opening credits of Duck Season (Temporada de patos) on Netflix while taking the bus back to school. First of all, the movie is great, so watch it if you get a chance. Second of all, this song is amazing. It is an earworm; I can't get it out of my mind and when I listen to it I find myself hitting the repeat button. From what I understand, it's a Spanish cover of O Pato, a Portuguese song by Brazilian musician Jo&atilde;o Gilberto (the father of bossa nova). I think it's one of the best songs I've ever heard.</p>
 		<p><i><a href="past_songs.html">Past favorite songs</a></i></p>
 		<br>
 		<h2>Current Favorite Album: <b>Quasi - Featuring "Birds"</b></h2>
