updated front page

--- a/home/index.html
+++ b/home/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html lang="en-US">
 	<head>
-		<title>Abdeet.net</title>
+		<title>Abhi Senthilkumar</title>
 		<link rel="stylesheet" href="home.css">
 		<meta charset="utf-8">
-		<meta name="author" content="Abdeet"> 
-		<meta name="description" content="Abdeet's website"> 
+		<meta name="author" content="Abhi Senthilkumar"> 
+		<meta name="description" content="Abhi Senthilkumar's website"> 
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="abdeet.net">
 		<!-- <meta name="twitter:image" content="http://abdeet.net/images/aalogoround.png"> -->
-		<meta name="twitter:description" content="Abdeet's website">
-		<meta name="twitter:creator" content="@abdeet_">
+		<meta name="twitter:description" content="Abhi Senthilkumar's website">
+		<!-- <meta name="twitter:creator" content="@abdeet_"> -->
 	</head>
 
 	<body>
 		<header>
-			<h1>abdeet.net</h1>
+			<h1>Abhi Senthilkumar</h1>
 		</header>
 		
-		<nav>
+		<!-- <nav>
 			<ul>
 				<li><a href="https://abdeet.net">Home - You Are Here</a></li>
-				<!-- <li><a href="https://arschaim.abdeet.net">Arsch Aim</a></li> -->
+				 <li><a href="https://arschaim.abdeet.net">Arsch Aim</a></li> 
 				<li><a href="https://images.abdeet.net">Images</a></li>
 				<li><a href="https://music.abdeet.net">Music</a></li>
 				<li><a href="https://school.abdeet.net">School</a></li>
 			</ul>
-		</nav>
+		</nav> -->
 		
 		<main>
-			<h2>Welcome to abdeet.net - Abhi Senthilkumar's website.</h2>
-			<h3>This is a site for most of the projects I do. Those are hosted at different parts of this site, some of which are linked above. If you know what you are looking for, it's easy to find.</h3>
+			<h2>Welcome to Abhi Senthilkumar's website.</h2>
+			<h3>Abhi Senthilkumar is a first-year chemical and biomolecular engineering student at the University of Maryland, College Park. He is a member of the Honors College Integrated Life Sciences Program.</h3>
 		</main>
 
 	</body>
