small change to service learning

--- a/school/projects/servicelearning/arboretum.html
+++ b/school/projects/servicelearning/arboretum.html
@@ -46,7 +46,7 @@
 				<br>
 				<div class="text">
                 	<p>Volunteering with the Arboretum taught me a lot about the amount of effort it takes to manage just one small part of the natural world on campus. I have a lot more respect for the people that work to keep our campus looking so beautiful. One important insight that I will draw from this opportunity to my career in life science is an appreciation for plant science and the wonderful world.</p>
-				<div>
+				</div>
 				<br>
 				<div class="text">
 					<p>The UMD Arboretum is a good organization to volunteer for because the process for volunteering is very simple and you feel like you have been productive at the end of the session. I would recommend volunteering with the Arboretum to future ILS students!</p>
