initially thought this would be a commit with updates to abdeet.net and the addition of my resume. apparently i havent committed in quite a while so tehres some other files that have been modified as well. outsidecam?

--- a/home/index.html
+++ b/home/index.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html lang="en-US">
-	<head>
-		<title>Abhi Senthilkumar</title>
-		<link rel="stylesheet" href="home.css">
-		<meta charset="utf-8">
-		<meta name="author" content="Abhi Senthilkumar"> 
-		<meta name="description" content="Abhi Senthilkumar's website"> 
-		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:title" content="abdeet.net">
-		<!-- <meta name="twitter:image" content="http://abdeet.net/images/aalogoround.png"> -->
-		<meta name="twitter:description" content="Abhi Senthilkumar's website">
-		<!-- <meta name="twitter:creator" content="@abdeet_"> -->
-	</head>
+<head>
+  <title>Abhi Senthilkumar's website</title>
+  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <meta name="author" content="Abhi Senthilkumar"> 
+  <meta name="description" content="Abhi Senthilkumar's website"> 
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="abdeet.net">
+  <meta name="twitter:description" content="Abhi Senthilkumar's website">
+</head>
 
-	<body>
-		<header>
-			<h1>Abhi Senthilkumar</h1>
-		</header>
-		
-		<!-- <nav>
-			<ul>
-				<li><a href="https://abdeet.net">Home - You Are Here</a></li>
-				 <li><a href="https://arschaim.abdeet.net">Arsch Aim</a></li> 
-				<li><a href="https://images.abdeet.net">Images</a></li>
-				<li><a href="https://music.abdeet.net">Music</a></li>
-				<li><a href="https://school.abdeet.net">School</a></li>
-			</ul>
-		</nav> -->
-		
-		<main>
-			<h2>Welcome to Abhi Senthilkumar's website.</h2>
-			<h3>Abhi Senthilkumar is a first-year chemical and biomolecular engineering student at the University of Maryland, College Park. He is a member of the Honors College Integrated Life Sciences Program.</h3>
-		</main>
+<body>
+  <header>
+    <h1>abdeet.net</h1>
+    <h3>Abhi Senthilkumar's website</h3>
+    <nav>
+      <a href="/">Home</a> |
+      <a href="resume">Resume</a> |
+      <a href="projects">Projects</a> |
+      <a href="funstuff">Fun Stuff</a>
+    </nav>
+    <br>
+    <br>
+  </header>
+  
+  <main>
+    <h2>Welcome to my website!</h2>
+    <p>I am a junior undergraduate at the University of Maryland, College Park. I am pursuing a dual degree in chemical engineering and computer science. This website is where I host my <a href="resume">resume</a>, <a href="projects">projects</a>, and <a href="funstuff">other miscellaneous things</a>. I usually only update this website during rapid bursts of interest. I last made changes on <strong>October 6th, 2024</strong>.</p>
+  </main>
 
-	</body>
+  <footer>
+    <hr>
+    <p><a href="https://abdeet.net">abdeet.net</a> is brought to you by Abhi Senthilkumar.</p>
+   </footer>
+
+</body>
 </html>
 
